--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drag-And-Drop</title>
+    
   </head>
-  <body></body>
+  <body>
+
+
+
+
+    
+  </body>
 </html>
 
