--- a/index.html
+++ b/index.html
@@ -6,33 +6,12 @@
     <title>Drag-And-Drop</title>
   </head>
   <body>
+    <div class="main">
+      <div class="submain">Image</div>
+      <div class="submain">Text</div>
+      <div class="submain">Icon</div>
+    </div>
 
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-   
     <script src="index.js"></script>
   </body>
 </html>
