--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       <div class="submain">Icon</div>
     </div>
 
+    <div class="main"></div>
+
+    <p></p>
+
+    <button class="resetbtn" onclick="resetBtn()">RESET</button>
+
     <script src="index.js"></script>
   </body>
 </html>
