--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Drag-And-Drop</title>
   </head>
   <body>
-    <div class="main">
+    <div id="cont1" class="main">
       <div class="submain">Image</div>
       <div class="submain">Text</div>
       <div class="submain">Icon</div>
     </div>
 
-    <div class="main"></div>
+    <div id="cont2" class="main"></div>
 
-    <p></p>
+    <p id="successmsg"></p>
 
     <button class="resetbtn" onclick="resetBtn()">RESET</button>
 
