--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drag-And-Drop</title>
+    <rel stylesheet="style.css" />
   </head>
   <body>
     <div id="cont1" class="main">
@@ -18,6 +19,7 @@
 
     <button class="resetbtn" onclick="resetBtn()">RESET</button>
 
+    <!-- JS file linking -->
     <script src="index.js"></script>
   </body>
 </html>
