--- a/index.html
+++ b/index.html
@@ -3,24 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Drag-And-Drop</title>
-    <!-- CSS file linking -->
-    <link rel="stylesheet" href="style.css" />
+    <title>Drag and Drop Demo</title>
   </head>
   <body>
-    <div id="cont1" class="main">
-      <div class="submain">Image</div>
-      <div class="submain">Text</div>
-      <div class="submain">Icon</div>
+    <div id="source">
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+      </ul>
     </div>
+    <div id="target"></div>
+    <script>
+      function init() {
+        // Make the source container draggable
+        var source = document.getElementById("source");
+        source.addEventListener("dragstart", startDrag, false);
 
-    <div id="cont2" class="main"></div>
+        // Make the target container droppable
+        var target = document.getElementById("target");
+        target.addEventListener("drop", drop, false);
+      }
 
-    <p id="successmsg"></p>
+      // Start dragging an item
+      function startDrag(event) {
+        // Get the dragged item
+        var item = event.target;
 
-    <button class="resetbtn" onclick="resetBtn()">RESET</button>
+        // Set the dataTransfer object
+        var dataTransfer = event.dataTransfer;
+        dataTransfer.setData("text/plain", item.innerHTML);
 
-    <!-- JS file linking -->
-    <script src="index.js"></script>
-  </body>
-</html>
+        // Change the appearance of the dragged item
+        item.style.border = "3px solid red";
+      }
+
+      // Drop an item
+      function drop(event) {
+        // Get the dropped item
+        var item = event.dataTransfer.getData("text/plain");
+
+        // Remove the dragged item from the source container
